# agent-memory

./: .agent-rules.json  .cursorrules  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  COMPETITION.md  DEVELOPMENT.md  Dockerfile  MCP.md  PRODUCTION_SSH_KEY.txt  PRODUCTION_SSH_KEY_OLD.txt  QUICKSTART.md  README.md  deploy.sh  docker-compose.yml  go.mod  go.sum  install.sh  package-lock.json  package.json  start-all.sh  start-backend.sh  start-frontend.sh  stop-all.sh  test-api.py  test-compress.go  test-extract.go  webhook.json
.github/workflows/: ci.yml  deploy.yml
.skills/: api-designer.md  devops-engineer.md  prompt-engineer.md  security-pro.md  sql-expert.md  testing-pro.md
cmd/agent/: main.go
cmd/cli/: main.go
cmd/connectors/: Dockerfile  main.go
cmd/gateway/: Dockerfile  main.go
cmd/mcp-server/: Dockerfile  main.go
cmd/memory-api/: Dockerfile  main.go
cmd/server/: api.go  api_handlers.go  api_test.go  e2e_test.go  main.go  mcp.go  ratelimit_test.go  sentry.go  swagger.go  swagger.json
dashboard/: AGENTS.md  package-lock.json  package.json
dashboard/src/: middleware.ts
deploy/k8s/: agent-memory.yaml
docker/: Dockerfile  compose.yml
docs/: API.md  USAGE.md  index.mdx  mem0-v3-analysis.md  mint.json  openapi.json  openapi.yaml  use-cases.md
docs/api-reference/: overview.mdx
docs/concepts/: data-loaders.mdx  evaluations.mdx  knowledge-graphs.mdx  memory-types.mdx  ontologies.mdx  search-modes.mdx  self-improvement.mdx
docs/deployment/: self-hosted.mdx
docs/getting-started/: configuration.mdx  installation.mdx  quickstart.mdx
docs/sdks/: python.mdx  (+1 more)
examples/: demo_comparison.py  test_definitive.py  test_memory_api.py  test_memory_persistence.py  test_proven_persistence.py  with_memory.py  without_memory.py
landing/: .env.example  index.html  lighthouserc.json  package-lock.json  package.json  test-page.js  vite.config.js
scripts/: install-quick.sh  install.sh
sdk/python/: README.md  pyproject.toml
sdk/python/agentmemory/: __init__.py
sdk/python/examples/: basic.py  knowledge_graph.py
sdk/python/hystersis/: __init__.py
sdk/python/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  langgraph.py  llamaindex.py
sdk/python/tests/: test_agentmemory.py  test_hystersis.py
skills-npm/: README.md  package-lock.json  package.json  publish.sh
(+210 files in other folders)
